# subhoptionlab

./: .gitignore  options-backtester-buildplan.md  render.yaml  test_midcap.py  test_quotes.py  test_yf_symbols.py  test_yfinance.py
backend/: backend_patch_reuse.py  check_db.py  config.py  download_new_data.py  fix_all_strategies.py  fix_entry_price.py  fix_real_instrument_keys.py  fix_strategy.py  fix_strategy_a7c8.py  fix_test2_strategy.py  patch_exits.py  patch_monitor.py  pipeline.py  pyproject.toml  requirements.txt  restart_backend.py  set_open.py  simulate_pnl.py  test_bt_dates.py  test_chain.py  test_chain2.py  test_chain3.py  test_chain4.py  test_chain_keyword.py  test_chain_keyword2.py  test_chain_keywords.py  test_chain_real.py  test_chain_struct.py  test_complete2.py  test_complete3.py  test_complete_csv.py  test_contracts.py  test_create.py  test_csv.py  test_csv2.py  test_csv3.py  test_csv4.py  test_csv5.py  test_dates.py  test_db.py  (+45 more)
backend/api/: main.py
backend/data/: auto_sync.py  downloader.py  lot_sizes.py  parquet_store.py  parser.py  queries.py  saved_strategies.json  trading_calendar.py
backend/engine/: backtest.py  expiry_resolver.py  minute_simulator.py  schemas.py  strategy_rules.py  strike_resolver.py
backend/live/: broker_router.py  db.py  feed.py  live_router.py  models.py  runner.py
backend/metrics/: calculator.py
backend/papertrade/: __init__.py  auth.py  db.py  models.py  monitor.py  router_admin.py  router_auth.py  router_history.py  router_markets.py  router_strategy.py  router_wallet.py  upstox_guard.py  websocket_manager.py
(+51 files in other folders)
